fix: VehicleEntries table max dimensions
Several pieces of the table including the table itself now have size limits. The notes section will be limited as it's the one with the highest risk of being too large. This should be improved upon such as by adding limits to the other columns and properly calculating how big each part should be (both by default, maximum and minimum), but under normal conditions it's sufficient.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,20 @@
   align-items: flex-start;
   padding: 1rem 1rem 1rem 0;
   flex-direction: column;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+.content .entries .notes {
+  overflow-y: auto;
+  max-width: 200px;
+  max-height: 100px;
+  word-break: break-all;
+}
+
+.content .entries table {
+  overflow-x: auto;
+  width: 100%;
 }
 
 .main .content .vehicle-info {
